✅página listar cliente ✅opção para editar cliente ✅botão relatório para mandar no zap.Representante e embaixo seus clientes. ✅clicar na imagem ver a foto grande ✅Remover informação de Desconto por cliente

--- a/app/src/main/res/layout/activity_cadatro_cliente.xml
+++ b/app/src/main/res/layout/activity_cadatro_cliente.xml
@@ -106,14 +106,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/field_desconto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Desconto %" />
-        </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
